--- a/composer.json
+++ b/composer.json
@@ -10,41 +10,72 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "require": {
-        "php": ">=5.6",
-        "symfony/symfony": "^3.2",
-        "sensio/framework-extra-bundle": "^3.0",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "php": ">=8.0",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^6.2",
+        "symfony/console": "5.3.*",
+        "symfony/dotenv": "5.3.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/framework-bundle": "5.3.*",
+        "symfony/mime": "5.3.*",
+        "symfony/runtime": "5.3.*",
+        "symfony/yaml": "5.3.*"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "phpunit/phpunit-mock-objects": "^3.2"
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App/"
+            "App\\": "src/"
         }
     },
-    "config": {
-        "bin-dir": "bin/"
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*"
     },
     "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
         "post-install-cmd": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+            "@auto-scripts"
         ],
         "post-update-cmd": [
-           "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+            "@auto-scripts"
         ],
-        "post-create-project-cmd": [
-            "@composer dump-autoload --optimize"
-        ]
+        "test": "@php bin/phpunit"
+    },
+    "conflict": {
+        "symfony/symfony": "*"
     },
     "extra": {
-        "symfony-app-dir": "app",
-        "symfony-web-dir": "web",
-        "incenteev-parameters": {
-           "keep-outdated": true,
-           "file": "app/config/parameters.yml"
+        "symfony": {
+            "allow-contrib": false,
+            "require": "5.3.*"
         }
+    },
+    "require-dev": {
+        "ext-fileinfo": "*",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.3.*",
+        "symfony/css-selector": "5.3.*",
+        "symfony/maker-bundle": "^1.34",
+        "symfony/phpunit-bridge": "5.3.*",
+        "symfony/process": "5.3.*"
     }
 }
